api enhancement
