# routes/healthEvaluations.js
@@ -1,9 +1,10 @@
 import express from "express"
 const router = express.Router()
 
-import { createHealthEvaluation, getHealthEvaluation } from "../controllers/healthEvaluation.js"
+import { createHealthEvaluation, getHealthEvaluation, registerMember } from "../controllers/healthEvaluation.js"
 
 router.post("/", /* #swagger.tags = ['Health Evaluations'] */ createHealthEvaluation)
+router.post("/register-member", /* #swagger.tags = ['Health Evaluations'] */ registerMember)
 router.get("/", /* #swagger.tags = ['Health Evaluations'] */ getHealthEvaluation)
 
 export default router
